--- a/src/style.css
+++ b/src/style.css
@@ -3,13 +3,11 @@ body {
   padding: 0;
   box-sizing: border-box;
   font-family: "Afacad", sans-serif;
-  /* background-color: #ec8f5e; */
-  background-color: #f3b664;
-  background-color: #af2655;
   background-color: #ffc5c5;
 }
 a {
-  color: #186f65;
+  color: #191d88;
+  text-decoration: none;
 }
 
 header {
@@ -18,20 +16,17 @@ header {
 
 h1 {
   text-align: center;
-  font-size: 36px;
-  font-weight: 800;
-  line-height: 2;
+  font-size: 35px;
+  font-weight: 700;
+  line-height: 1.5;
   color: #191d88;
-  color: #af2655;
 }
 form {
   display: flex;
 }
 .form-container {
-  background-color: #ffb84c;
-  background-color: #860a35;
-  background-color: #ff8f8f;
-  padding: 20px 25px;
+  background-color: #ff7d7d;
+  padding: 22px 25px;
   margin-bottom: 30px;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -41,6 +36,7 @@ form {
   line-height: 1.5;
   font-size: 14px;
   font-style: italic;
+  color: #191d88;
   opacity: 0.7;
 }
 .hidden {
@@ -48,13 +44,11 @@ form {
 }
 .container {
   max-width: 650px;
-  margin: 70px auto;
+  margin: 80px auto;
 }
-.poem strong {
-  color: #191d88;
-}
+
 .poem-title {
-  padding: 15px;
+  padding: 13px;
   border: 1px solid grey;
   border-radius: 50px;
   width: 75%;
@@ -62,16 +56,14 @@ form {
   line-height: 20px;
   background-color: whitesmoke;
   color: #191d88;
-  color: #af2655;
 }
 .button {
   width: 120px;
-  padding: 10px 20px;
-  font-size: 16px;
+  padding: 9px 18px;
+  font-size: 15px;
   line-height: 20px;
   margin-left: 8px;
   background-color: #191d88;
-  background-color: #af2655;
   font-weight: 500;
   color: #fff;
   border: none;
@@ -79,11 +71,8 @@ form {
 }
 
 .poem {
-  background-color: #ffb84c;
-  background-color: #860a35;
-  background-color: #ff8f8f;
+  background-color: #ff7d7d;
   color: #191d88;
-  color: #af2655;
   font-size: 20px;
   font-weight: 500;
   padding: 20px;
@@ -93,13 +82,12 @@ form {
 }
 
 .poem strong {
-  color: #191d88;
-  color: #186f65;
+  color: #af2655;
 }
 
 footer {
   text-align: center;
-  font-size: 16px;
+  font-size: 15px;
   margin-top: 30px;
 }
 
