--- a/src/style.css
+++ b/src/style.css
@@ -3,8 +3,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   font-family: "Afacad", sans-serif;
-  background-color: lightblue;
-  background: linear-gradient(to right, rgb(242, 112, 156), rgb(255, 148, 114));
+  background-color: lavenderblush;
 }
 a {
   color: #191d88;
@@ -27,7 +26,7 @@ form {
   display: flex;
 }
 .form-container {
-  background-color: #ff7d7d;
+  background-color: pink;
   padding: 22px 25px;
   margin-bottom: 30px;
   border: 3px solid #af2655;
@@ -74,7 +73,7 @@ form {
 }
 
 .poem {
-  background-color: #ff7d7d;
+  background-color: pink;
   color: #860a35;
   font-size: 20px;
   font-weight: 500;
